# mcp-geo

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTEXT.md  Dockerfile  GEMINI.md  Gemini-Code-Review.md  PROGRESS.MD  README.md  SECURITY.md  SKILL.md  codex-transfer.patch  commit-template.txt  copilot-instructions.md  documentation.md  implement.md  mcp.json  package.json  pyproject.toml  pytest.ini  safe-by-design.json  tutorial.md  update-wsl-certs.sh
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml  postgis.Dockerfile
.github/: CODEOWNERS  copilot-instructions.md
RELEASE_NOTES/: 0.2.1.md  0.2.10.md  0.2.11.md  0.2.12.md  0.2.2.md  0.2.3.md  0.2.4.md  0.2.5.md  0.2.6.md  0.2.7.md  0.2.8.md  0.2.9.md  0.3.0.md  0.3.1.md  0.3.2.md  0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md
docs/: Boundaries.json  Boundaries.md  Build.md  ChatGPT_setup_chat.md  Claude Conversations on MCP-Geo.docx  Claude Conversations on MCP-Geo.md  Claude failed conversation.docx  Claude_failed_conversation.md  Claude_opus_4-6_failed_convo_1.md  Claude_success_conversation.md  Documentation collection task.docx  MCP-Geo Forest_of_Bowland_Peatland_Survey.docx  MCP-Geo Forest_of_Bowland_Peatland_Survey.md  MCP-Geo Intelligence Report- A452 High Street Leamington Resurfacing.docx  MCP-Geo Intelligence Report- A452 High Street Leamington Resurfacing.md  MCP-Geo Peatland Site Survey - Forest of Bowland National Landscape.docx  MCP-Geo Peatland Site Survey - Forest of Bowland National Landscape.md  Mapping Ordnance Survey & ONS APIs to the Model Context Protocol (MCP).docx  Working with MCP Servers.docx  boundaries_completion_checklist.json  boundary_cache.md  claude_opus_4-6_failed_convo_2.md  client_trace_strategy.md  codex_usage_examples.md  decision_support_audit_pack.md  docker_mcp_catalog_submission.md  document_hygiene.md  evaluation.md  examples.md  getting_started.md  golden_prompts_mcp_geo.md  golden_prompts_os_mcp.md  map_delivery_support_matrix.md  map_embedding_best_practices.md  map_handling_review.md  map_scenario_packs.md  maps-vector-vts-resources-styles.json  mcp_apps_alignment.md  mcp_geo_a452_high_street_intelligence_1.md  payload-redacted-example.json  (+9 more)
infra/: Dockerfile  README-REMOVED.txt  devcontainer.json
playground/: app.py  index.html  package-lock.json  package.json  playwright.compact-matrix.config.js  playwright.compact.config.js  playwright.config.js  playwright.full.config.js  playwright.live.config.js  playwright.trials.config.js  vite.config.js
resources/: address_classification_codes.json  admin_boundaries.json  boundaries_wards.json  boundary_pack_sources.json  boundary_packs_index.json  code_list_pack_sources.json  code_list_packs_index.json  custodian_codes.json  landis_products.json  layers_catalog.json  map_embedding_style_profiles.json  nomis_workflows.json  offline_map_catalog.json  ons_catalog.json  ons_geo_cache_index.json  ons_geo_sources.json  ons_observations.json  os_catalog.json  peat_layers_england.json  protected_landscapes_england.json
scripts/: __init__.py  boundary_triage.py  (+77 more)
(+758 files in other folders)
