[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-geo"
version = "0.1.0"
description = "MCP server for geospatial and ONS tools"
authors = [
    { name = "DCMS-TECH" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "loguru",
    "pytest"
]

[project.optional-dependencies]
test = ["pytest", "httpx"]

[tool.setuptools]
packages = ["server", "tools"]
